# chatgpt-conversation-finder

./: .pre-commit-config.yaml  .python-version  Makefile  configuration.html  development.html  genindex.html  index.html  installation.html  introduction.html  mypy.ini  objects.inv  pyproject.toml  search.html  searchindex.js  todo.html  usage.html
.github/workflows/: ci.yml  doc_pages.yml
_sources/: configuration.rst.txt  development.rst.txt  index.rst.txt  introduction.rst.txt  todo.rst.txt  usage.rst.txt
docs/: conf.py  index.rst  installation.rst  usage.rst
src/chatgpt_conversation_finder/: chats_json_handler.py  config.py  file_dialog.py  gui.py  helpers.py  index_manager.py  main.py  prefix_index_manager.py  quick_search.py  sanitizer.py  validate_conversations.py  word_index_manager.py
tests/: common.py  conftest.py  test_config.py  test_constants.py  test_exceptions.py  test_filedialog.py  test_grep.py  test_gui.py  test_index_manager.py  test_main.py  test_prefix_index_manager.py  test_quick_search.py  test_sanitizer.py  test_word_index_manager.py
tests/files/config/: .dirlock  config.ini
tests/files/data/: conversations.json  conversations_invalid.json
